force-app/main/default/objects/Log__c/fields/Create_Data__c.field-meta.xml
<CustomField>
    <fullName>Create_Data__c</fullName>
    <label>Create Data</label>
    <type>Date</type>
</CustomField>