force-app/main/default/objects/Log__c/fields/ObjectId__c.field-meta.xml
<CustomField>
    <fullName>ObjectId__c</fullName>
    <label>ObjectId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>